[package]
name = "sam"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
directories = "6.0.0"
humantime = "2.1.0"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.20.2"
parking_lot = "0.12.3"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
rhai = { version = "1.20.0", features = ["serde", "sync"] }
schemars = "1.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
similar-asserts = "1.6.0"
tempdir = "0.3.7"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
